[gd_scene format=3 uid="uid://nawnnea0vpru"]

[ext_resource type="Script" uid="uid://cusbodslhjg8d" path="res://inventory_system/inventory_ui.gd" id="1_gf3dx"]
[ext_resource type="PackedScene" uid="uid://c6w7piw4l5e8u" path="res://inventory_slot.tscn" id="2_34y5v"]

[node name="Control" type="Control" unique_id=1596162079]
layout_mode = 3
anchors_preset = 0
offset_right = 64.0
offset_bottom = 64.0
script = ExtResource("1_gf3dx")
slot_scene = ExtResource("2_34y5v")

[node name="Panel" type="Panel" parent="." unique_id=2066875677]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0

[node name="Grid" type="GridContainer" parent="." unique_id=1949432860]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="DragPreview" type="Control" parent="." unique_id=1576652133]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="DragIcon" type="TextureRect" parent="DragPreview" unique_id=330025162]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0

[node name="Tooltip" type="Panel" parent="." unique_id=1486939256]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TooltipName" type="Label" parent="Tooltip" unique_id=1599606488]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="TooltipDesc" type="Label" parent="Tooltip" unique_id=1320649261]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
